# python-weather-app

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
app/: main.py
tests/: test_main.py
