[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-app"
version = "0.1.0"
description = "A simple FastAPI weather fetcher"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
test = ["pytest", "httpx"]